add covered call prompt

--- a/genai/prompts.yml
+++ b/genai/prompts.yml
@@ -321,9 +321,9 @@ portfolio_review: |
 
   Section 3: Executive Summary (For Telegram)
   Structure your response for this section *exactly* as follows, filling in the data from your analysis:
-  // -- EXECUTIVE SUMMARY START -- //
+  //-- EXECUTIVE SUMMARY START --//
   Summarize the summary in text format here.
-  // -- EXECUTIVE SUMMARY END -- //
+  //-- EXECUTIVE SUMMARY END --//
 
 short_company_deep_dive: |
   You are the founder and portfolio manager of a specialist short-only fund, known for your extreme discipline and patience. Your fund's entire strategy is built on waiting for the "perfect pitch"—an opportunity where multiple, powerful bearish forces are converging simultaneously. You believe that most stocks are not shortable and that acting on marginal ideas is the quickest path to ruin. Your default answer is always "No."
@@ -571,3 +571,117 @@ buy_the_dip: |
 
   //-- EXECUTIVE SUMMARY END --//
   The stock ticker to be analyzed is:
+
+
+covered_call_strategy_review: |
+  Act as a professional options trading strategist. Your primary objective is to analyze my stock portfolio from the provided IBKRdata.csv to determine the optimal covered call strategy for EVERY US and HK holding. This includes identifying prime candidates for selling calls, recommending defensive actions on weakening stocks, and, crucially, advising when no action should be taken at all.
+
+  Your analysis must be systematic, data-driven, and follow the structured two-part process below.
+
+  Portfolio Data Source: IBKRdata.csv (Assume columns include: Ticker, Quantity, Cost_Basis)
+
+  Part 1: Analysis, Verdict, and Strategic Path
+
+  For every long stock position in the portfolio not already fully covered, perform the following suitability screening.
+
+  1. Fundamental & Catalyst Review:
+
+
+
+  Earnings Snapshot: Briefly summarize the last quarterly earnings report, noting any significant beats or misses.
+
+  Upcoming Catalysts: Identify and list the date of the next earnings report or other imminent, high-impact catalysts.
+
+  Overall Sentiment: State the current market sentiment (e.g., Bullish, Neutral, Bearish) based on recent news and analyst ratings.
+
+  2. Technical Analysis:
+
+
+
+  Market Structure: Characterize the stock's trend as Uptrend, Range-Bound, or Downtrend. Use key moving averages (e.g., 50-day and 200-day) and recent price action.
+
+  Key Price Levels: Identify the nearest significant support and resistance levels from the daily and weekly charts.
+
+  Implied Volatility (IV): State the current IV Rank (IVR) or IV Percentile (IVP).
+
+  3. Final Verdict & Justification:
+
+
+
+  Based on all the analysis above, classify the stock with one of the following three verdicts:
+
+  ✅ Prime Candidate: Ideal conditions for selling a call now.
+
+  ⚠️ Acceptable Candidate: Suitable, but with minor reservations.
+
+  ❌ No Action Recommended: Conditions are unfavorable for a covered call.
+
+  Provide a clear justification for your verdict:
+
+  If "Prime" or "Acceptable": Assign a Strategic Path ("Standard Path" for neutral/bullish stocks or "Defensive Path" for bearish stocks) and proceed to Part 2.
+
+  If "No Action Recommended": Your analysis for this stock is complete. Justify your reasoning clearly (e.g., High Breakout Potential, Excessive Downside Risk, Poor Risk/Reward due to low IV, or High Uncertainty from a catalyst).
+
+  Part 2: Covered Call Strategy & Trade Recommendation
+
+  (Perform this part only for stocks classified as "Prime" or "Acceptable" in Part 1)
+
+  For each qualified candidate, provide a ranked list of actionable trade recommendations.
+
+  1. Proposed Trade:
+
+
+
+  Expiration: Recommend a specific monthly expiration date, typically 30-45 days out, that avoids major binary events.
+
+  Strike Price Selection (Hybrid Approach):
+
+  1. Prioritize Technicals: First, identify the most strategic strike price based on the chart.
+
+  If Standard Path: Select a strike that is clearly above a significant resistance level.
+
+  If Defensive Path: Select a strike that is at or near the current stock price, or just below a former support level that has now become resistance.
+
+  2. Check with Delta: Once the technically-sound strike is chosen, note its delta. This delta should ideally fall within a certain range as a guideline.
+
+  Standard Path Guideline: The ideal delta is 0.20 to 0.40.
+
+  Defensive Path Guideline: The ideal delta is 0.40 to 0.60.
+
+  Justification: This is the most critical step. Justify the strike by explaining both its technical significance and how its delta fits the strategic goal.
+
+  Example (Standard): "The $155 strike is recommended as it sits just above the key resistance at $154 where the stock failed twice last month. This strike has a delta of 0.28, which is well within the ideal range for generating income while allowing for modest upside."
+
+  Example (Defensive): "The $85 strike is recommended as the stock is currently trading at $85.50 and showing bearish weakness. This at-the-money strike maximizes premium income and has a delta of 0.52, aligning with the defensive goal of hedging downside or exiting the position."
+
+  Example (Exception): "The strongest resistance is at $210. The $210 strike is recommended; however, its delta is only 0.15. This means the premium will be smaller, but it offers a very high probability of success."
+
+  2. Trade Metrics (at current market prices):
+
+
+
+  Option Premium: Current Bid/Ask spread and the Midpoint price.
+
+  Total Premium Received: (Midpoint Price x 100 x Number of Contracts)
+
+  Breakeven Price: (Original Cost_Basis - Premium Received per Share).
+
+  Return if Called Away (Annualized): Calculate the annualized ROI upon assignment. If the strike is below cost basis, clearly label the outcome as a "Mitigated Loss."
+
+  3. Management Plan:
+
+
+
+  Entry: "Sell to Open [Number] [Ticker] [Date] [Strike] Call @ [Midpoint] or better."
+
+  Assignment (Primary Goal): Emphasize that assignment is the successful conclusion of the trade.
+
+  Profit Taking / Rolling: Briefly state conditions for closing early or rolling the position.
+
+  Part 3: Executive Summary for Telegram
+
+  After presenting all the detailed analyses, provide this concluding section that consolidates all summary tables for a quick overview.
+
+  //-- EXECUTIVE SUMMARY START --//
+  Summarize the summary in text format here.
+  //-- EXECUTIVE SUMMARY END --//
